fix: cache config on VisitorState.context; make consumer-example truly standalone
Second independent code-review + QA round, targeting the constructor-
injection removal specifically since it was the highest-risk recent
change:

- Switched ForbiddenApiMatcher memoization from a plain instance field
  to VisitorState.context-scoped caching (context.get/put keyed by
  class). Context is javac/Error Prone's own per-compilation DI
  container, so this is correct regardless of whether a build tool
  ever reuses a discovered checker instance across compilations with
  different flags - an assumption the instance field couldn't actually
  guarantee on its own, even though it held for the standard
  ServiceLoader-based loading path the reviewer traced.
- examples/consumer-example had only ever been built from inside this
  repo, silently inheriting the parent's ancestor .mvn/jvm.config
  (Maven walks up from cwd for this file regardless of reactor
  membership) - so the earlier "validated end-to-end" claim was real
  but incomplete. Proved by building a copy from a directory with no
  ancestor .mvn: fails with IllegalAccessError before Error Prone even
  runs. Fixed by giving the example its own .mvn/jvm.config, then
  re-validated the pass and fail paths from a genuinely isolated
  directory.
- Documented (not a bug, confirmed via javap against the real jar):
  repeated -XepOpt:ForbiddenApi:Signatures= flag occurrences don't
  merge - ErrorProneFlags is a plain HashMap keyed by flag name, so a
  second occurrence silently replaces the first. Multiple files need
  one comma-joined Signatures= value. Clarified in the README.
- Confirmed solid, no code changes needed: the void.class fix's "no
  reachable null-owner via the other 3 matchers" theory, and the
  reverse-iteration duplicate-precedence fix for 3+ overlapping
  signatures - both survived adversarial probing from both agents.

Adds 36 new regression tests under bugpatterns/qa2/ from this round.
130 tests total, 100% 